--- a/pom.xml
+++ b/pom.xml
@@ -10,6 +10,8 @@
 		<productionMode>false</productionMode>
 		<vaadin.version>7.5.1</vaadin.version>
 		<vaadin.plugin.version>${vaadin.version}</vaadin.plugin.version>
+        <appengine.app.version>1</appengine.app.version>
+        <appengine.target.version>1.9.18</appengine.target.version>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
 	</properties>
@@ -230,6 +232,11 @@
 					</webResources>
 				</configuration>
 			</plugin>
+            <plugin>
+                <groupId>com.google.appengine</groupId>
+                <artifactId>appengine-maven-plugin</artifactId>
+                <version>${appengine.target.version}</version>
+            </plugin>
 		</plugins>
 
 		<pluginManagement>
